--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "Coding Test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.test.ts"
   },
   "author": "Hernan Garchtrom",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",                
+    "typescript": "^3.5.3"
+  }
 }
